5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1664_1393.log
== TEST (2019-04-16 11:06:08) 
-- CODE:
p1 = float(int("Peso da encomenda em gramas: "))

if (p1 >= 5000.0):
	x = (p1 * 0.05)

print(round(x, 2))
	
else: 
	x = (60 + (p1*0.04))

print(round(x, 2))	
	
	
-- ERROR:
File "XXXX", line 8
    else: 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:06:35) 
-- CODE:
p1 = float(int("Peso da encomenda em gramas: "))

	if (p1 >= 5000.0):
	x = (p1 * 0.05)

print(round(x, 2))
	
	else: 
	x = (60 + (p1*0.04))

print(round(x, 2))	
	
	
-- ERROR:
File "XXXX", line 3
    if (p1 >= 5000.0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:07:13) 
-- CODE:
p1 = float(int("Peso da encomenda em gramas: "))

if (p1 >= "5000.0"):
	x = (p1 * 0.05)

print(round(x, 2))
	
else: 
	x = (60 + (p1*0.04))

print(round(x, 2))	
	
	
-- ERROR:
File "XXXX", line 8
    else: 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:07:39) 
-- CODE:
p1 = float(int("Peso da encomenda em gramas: "))

if (p1 >= "5000.0"):
	x = (p1 * 0.05)

print(round(x, 2))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    p1 = float(int("Peso da encomenda em gramas: "))
ValueError: invalid literal for int() with base 10: 'Peso da encomenda em gramas: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:10:04) 
-- CODE:
g = float(int("Peso da encomenda em gramas: "))

if (g >= 500.0):
	x = (g*0.05)
else: 
	x = (60+(g*0.04))
	
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    g = float(int("Peso da encomenda em gramas: "))
ValueError: invalid literal for int() with base 10: 'Peso da encomenda em gramas: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:10:10) 
-- CODE:
g = float(int("Peso da encomenda em gramas: "))

if (g >= 500.0):
	x = (g*0.05)
else: 
	x = (60+(g*0.04))
	
print(round(g, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    g = float(int("Peso da encomenda em gramas: "))
ValueError: invalid literal for int() with base 10: 'Peso da encomenda em gramas: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:10:23) 
-- CODE:
g = float(input("Peso da encomenda em gramas: "))

if (g >= 500.0):
	x = (g*0.05)
else: 
	x = (60+(g*0.04))
	
print(round(g, 2))	
-- OUTPUT:
1232.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:11:02) 
-- CODE:
g = float(input("Peso da encomenda em gramas: "))

if (g >= 500.0):
	x = (g*0.05)
	print(round(x, 2))
else: 
	x = (60+(g*0.04))
	print(round(g, 2))	
-- OUTPUT:
61.61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:12:02) 
-- CODE:
g = float(input("Peso da encomenda em gramas: "))

if (g >= 5000.0):
	x = (g*0.05)
	print(round(x, 2))
else: 
	x = (60+(g*0.04))
	print(round(g, 2))	
-- OUTPUT:
1232.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:13:07) 
-- CODE:
g = float(input("Peso da encomenda em gramas: "))

if (g >= 5000.0):
	x = ((g*0.04) + 60)
	print(round(x, 2))
else: 
	x = (g*0.05)
	print(round(g, 2))	
-- OUTPUT:
1232.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:13:15) 
-- CODE:
g = float(input("Peso da encomenda em gramas: "))

if (g >= 5000.0):
	x = ((g*0.04) + 60)
	print(round(x, 2))
else: 
	x = (g*0.05)
	print(round(g, 2))	
-- EXECUTION TIME:
0.177453
-- TEST CASE 1:
---- input:
1232.2
---- correct output:
61.61
---- user output:
1232.2
-- TEST CASE 2:
---- input:
5055.98
---- correct output:
262.24
---- user output:
262.24
-- TEST CASE 3:
---- input:
200
---- correct output:
10.0
---- user output:
200.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:13:32) 
-- CODE:
g = float(input("Peso da encomenda em gramas: "))

if (g >= 5000.0):
	x = ((g*0.04) + 60)
	
	print(round(x, 2))
else: 
	x = (g*0.05)
	
	print(round(x, 2))
-- OUTPUT:
61.61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:13:38) 
-- CODE:
g = float(input("Peso da encomenda em gramas: "))

if (g >= 5000.0):
	x = ((g*0.04) + 60)
	
	print(round(x, 2))
else: 
	x = (g*0.05)
	
	print(round(x, 2))
-- EXECUTION TIME:
0.129314
-- TEST CASE 1:
---- input:
1232.2
---- correct output:
61.61
---- user output:
61.61
-- TEST CASE 2:
---- input:
5055.98
---- correct output:
262.24
---- user output:
262.24
-- TEST CASE 3:
---- input:
200
---- correct output:
10.0
---- user output:
10.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
